# base-project

./: .env.example  README.md  chat.html  chat_response.json  main.py  nohup.out  pyproject.toml  qianwen_get_response.json  qianwen_response.json  requirements.txt  setup.py  工程结构.md
.cursor/rules/: projectrule.mdc
app/api/: deps.py  router.py
app/api/endpoints/: chat.py  llm.py  roles.py  sessions.py  users.py
app/api/middleware/: logging.py
app/core/: config.py  events.py  security.py  service_initializer.py
app/models/entities/: base.py  mongo_base.py  mongo_models.py  redis_models.py
app/models/schemas/: message.py  role.py  session.py  user.py
app/services/: chat_handler.py  chat_service.py  session_service.py
app/services/ai/: function_caller.py
app/services/ai/filter/: __init__.py  content_filter.py  filter_router.py  models.py  sensitive_classifier.py
app/services/ai/llm/: base_llm_service.py  deepseek_model.py  deepseek_service.py  llm_factory.py  model_adapter.py  qianwen_service.py  role_selector.py
app/services/ai/memory/: __init__.py  base_memory.py  memory_service.py  mongo_backup.py  (+1 more)
app/services/formatters/: __init__.py  sse_formatter.py  stream_formatter.py
app/services/storage/: cache_service.py  mongo_repository.py  mongo_service.py  redis_repository.py  redis_service.py  session_repository.py
app/static/: chat.html  init_roles copy.html  init_roles.html  session_creator.html  session_manager.html  video_management.html
app/utils/: exceptions.py  logging.py
docs/: 工程结构.md  工程规范.md  聊天模块设计.md  需求设计文档.md
tests/: conftest.py
(+9 files in other folders)
